fix broken linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ footer-links:
   github: lindscales
   googleplus: # anything in your profile username that comes after plus.google.com/
   instagram:
-  linkedin: https://www.linkedin.com/in/lindsey-scales/
+  linkedin: lindsey-scales/
   pinterest:
   rss: # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
